--- a/src/assets/globalsass/index.scss
+++ b/src/assets/globalsass/index.scss
@@ -68,6 +68,7 @@ a {
   z-index: 12;
   display: flex;
   justify-content: unset !important;
+  align-items: center;
   padding: 0.8rem 1rem !important;
   min-height: 3.5rem;
 }
@@ -112,5 +113,7 @@ a {
     visibility: visible;
     cursor: pointer;
     margin-right: 2rem;
+    font-size: 20px;
+    
   }
 }
